--- a/style.css
+++ b/style.css
@@ -76,3 +76,22 @@ font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 	width: 75%;
 	margin: auto;
 }
+.subtitle{
+	margin: 30px 0;
+	text-transform: capitalize;
+	font-family: Georgia, 'Times New Roman', Times, serif;
+}
+.paragraf{
+	margin-bottom: 30px;
+	font-size:large;
+	font-family:Georgia, 'Times New Roman', Times, serif ;
+}
+.list{
+	margin-bottom: 30px;
+	margin-left: 20px;
+	font-family: Georgia, 'Times New Roman', Times, serif;
+}
+.list h3{
+	margin-bottom: 10px;
+	margin-left:-20px;
+}
