--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 @font-face{
 	font-family:Fredericka;
 	src: url(./font/FrederickatheGreat-Regular.ttf);
@@ -85,13 +86,22 @@ font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 	margin-bottom: 30px;
 	font-size:large;
 	font-family:Georgia, 'Times New Roman', Times, serif ;
+	color: gray;
 }
 .list{
 	margin-bottom: 30px;
 	margin-left: 20px;
 	font-family: Georgia, 'Times New Roman', Times, serif;
+	color: gray;
 }
 .list h3{
 	margin-bottom: 10px;
 	margin-left:-20px;
+	color: black;
+}
+.list li{
+	margin-bottom: 7px;
+}
+.galley-singl{
+	width: 16%;
 }
