--- a/style.css
+++ b/style.css
@@ -105,3 +105,6 @@ font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 .galley-singl{
 	width: 16%;
 }
+.singl-img img{
+	width: 100%;
+}
