--- a/style.css
+++ b/style.css
@@ -73,10 +73,6 @@ font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 .heder-logo h1{
 	text-transform: uppercase;
 }
-.content-container container{
-	width: 75%;
-	margin: auto;
-}
 .subtitle{
 	margin: 30px 0;
 	text-transform: capitalize;
@@ -88,6 +84,9 @@ font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 	font-family:Georgia, 'Times New Roman', Times, serif ;
 	color: gray;
 }
+ p {
+	 margin-bottom: 1ex;
+ }
 .list{
 	margin-bottom: 30px;
 	margin-left: 20px;
@@ -105,6 +104,6 @@ font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 .galley-singl{
 	width: 16%;
 }
-.singl-img img{
+.singl-img{
 	width: 100%;
 }
