--- a/style.css
+++ b/style.css
@@ -114,6 +114,6 @@ font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 .galley-singl{
 	width: 16%;
 }
-.singl-img{
+.singl-img img{
 	width: 100%;
 }
