--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 .list li{
 	margin-bottom: 7px;
 }
-.galley-singl{
+.gallery-singl{
 	width: 16%;
 	display: inline-block;
 	float: left;
